Add layout files for the credits screen.

--- a/app/src/main/res/layout/credits_fragment.xml
+++ b/app/src/main/res/layout/credits_fragment.xml
@@ -1,16 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".movie.credits.MovieCreditsFragment"
     >
 
-  <TextView
+  <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="Hello"
+      android:layout_height="match_parent">
+
+    <TextView
+      android:id="@+id/cast_title"
+      android:layout_width="96dp"
+      android:layout_height="0dp"
+      android:text="@string/cast_title"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
       />
 
+    <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/rv_cast"
+      android:layout_weight="1"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintTop_toBottomOf="@+id/cast_title"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintHeight_percent="0.45"
+      />
+
+    <TextView
+      android:id="@+id/crew_title"
+      android:layout_width="96dp"
+      android:layout_height="0dp"
+      android:text="@string/crew_title"
+      app:layout_constraintTop_toBottomOf="@+id/rv_cast"
+      app:layout_constraintStart_toStartOf="parent"
+      />
+
+    <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/rv_crew"
+      android:layout_weight="1"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintTop_toBottomOf="@+id/crew_title"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintHeight_percent="0.45"
+      />
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
