--- a/app/src/main/res/layout/credits_fragment.xml
+++ b/app/src/main/res/layout/credits_fragment.xml
@@ -12,43 +12,65 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-    <TextView
-      android:id="@+id/cast_title"
-      android:layout_width="96dp"
-      android:layout_height="0dp"
-      android:text="@string/cast_title"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      />
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:descendantFocusability="blocksDescendants">
 
-    <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/rv_cast"
-      android:layout_weight="1"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      app:layout_constraintTop_toBottomOf="@+id/cast_title"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintHeight_percent="0.45"
-      />
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:orientation="vertical" >
 
-    <TextView
-      android:id="@+id/crew_title"
-      android:layout_width="96dp"
-      android:layout_height="0dp"
-      android:text="@string/crew_title"
-      app:layout_constraintTop_toBottomOf="@+id/rv_cast"
-      app:layout_constraintStart_toStartOf="parent"
-      />
+        <TextView
+          android:id="@+id/cast_title"
+          android:layout_width="100dp"
+          android:layout_height="28sp"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="20dp"
+          android:text="@string/cast_title"
+          android:textStyle="bold"
+          android:textSize="20sp"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          />
 
-    <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/rv_crew"
-      android:layout_weight="1"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      app:layout_constraintTop_toBottomOf="@+id/crew_title"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintHeight_percent="0.45"
-      />
+        <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/rv_cast"
+          android:layout_width="match_parent"
+          android:layout_height="500dp"
+          android:layout_marginStart="10dp"
+          android:layout_marginEnd="30dp"
+          app:layout_constraintTop_toBottomOf="@+id/cast_title"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintHeight_percent="0.45"
+          />
 
+        <TextView
+          android:id="@+id/crew_title"
+          android:layout_width="100dp"
+          android:layout_height="28sp"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="20dp"
+          android:text="@string/crew_title"
+          android:textStyle="bold"
+          android:textSize="20sp"
+          app:layout_constraintTop_toBottomOf="@+id/rv_cast"
+          app:layout_constraintStart_toStartOf="parent"
+          />
+
+        <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/rv_crew"
+          android:layout_width="match_parent"
+          android:layout_height="500dp"
+          android:layout_marginStart="10dp"
+          android:layout_marginEnd="30dp"
+          app:layout_constraintTop_toBottomOf="@+id/crew_title"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintHeight_percent="0.45"
+          />
+
+      </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
   </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
