Modified the movie detail page to generate WebViews that play an embedded video from youtube. Youtube links are generated using the TMDB API. GET /movie/{movie_id}/videos

--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -130,8 +130,8 @@
 
       <HorizontalScrollView
           android:id="@+id/movieTrailersContainer"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginTop="8dp"
@@ -143,10 +143,9 @@
 
         <LinearLayout
             android:id="@+id/movieTrailers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal" />
       </HorizontalScrollView>
 
       <TextView
