--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -11,6 +11,7 @@
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_marginEnd="8dp"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
       >
 
@@ -178,18 +179,14 @@
           app:layout_constraintTop_toBottomOf="@+id/movieTrailersContainer"
           />
 
-      <LinearLayout
-          android:id="@+id/movieReviews"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="16dp"
-          android:layout_marginRight="16dp"
-          android:layout_marginTop="8dp"
-          android:orientation="vertical"
-          app:layout_constraintLeft_toLeftOf="parent"
-          app:layout_constraintRight_toRightOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/reviewsLabel"
-          />
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/rv_reviews"
+          android:layout_width="match_parent"
+          android:layout_height="500dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginEnd="32dp"
+          app:layout_constraintTop_toBottomOf="@+id/reviewsLabel">
+      </androidx.recyclerview.widget.RecyclerView>
 
       <Button
           android:id="@+id/movieCredits"
@@ -198,10 +195,11 @@
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginTop="8dp"
+          android:layout_marginEnd="8dp"
           android:text="@string/view_credits"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/movieReviews"
+          app:layout_constraintTop_toBottomOf="@+id/rv_reviews"
           />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
