--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
         android:icon="@drawable/ic_arrow_upward_black"
         android:title="@string/movie_list_top_rated"/>
     <item
+        android:id="@+id/nav_most_popular"
+        android:icon="@drawable/ic_arrow_upward_black"
+        android:title="@string/movie_list_most_popular"/>
+    <item
         android:id="@+id/nav_gallery"
         android:icon="@drawable/ic_menu_gallery"
         android:title="Gallery"/>
