--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,6 +19,19 @@
         app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
   </fragment>
   <fragment
+      android:id="@+id/popularMovieListFragment"
+      android:name="com.affinityclick.mvvm.movie.list.mostPopular.MovieMostPopularListFragment"
+      android:label="@string/movie_list_most_popular"
+      tools:layout="@layout/content_fragment">
+    <action
+        android:id="@+id/viewMovieDetail"
+        app:destination="@+id/movieDetailFragment"
+        app:enterAnim="@anim/nav_default_enter_anim"
+        app:exitAnim="@anim/nav_default_exit_anim"
+        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+        app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
+  </fragment>
+  <fragment
       android:id="@+id/movieDetailFragment"
       android:name="com.affinityclick.mvvm.movie.detail.MovieDetailFragment"
       android:label="@string/movie_detail_fragment"
